@@ -11,9 +11,6 @@
   </condition>
 
   <property name="jeg-config" location="jpa-entity-generator-core/target/classes/jeg-config.yml" />
-  <property name="jdk-opts"
-    value="--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
-
 
   <target name="test">
     <condition property="analyze.profile" value="-P analyze" else="">
@@ -72,7 +69,6 @@
 
     <java classname="${core.mainClass}" classpath="${lib}/*" fork="true" failonerror="true">
       <arg value="-c=${jeg-config}" />
-      <jvmarg line="${jdk-opts}" />
     </java>
   </target>
 
@@ -89,8 +85,6 @@
     </exec>
 
     <exec executable="${mvn.cmd}" failonerror="true">
-      <env key="MAVEN_OPTS"
-        value="${jdk-opts}" />
       <arg line="-f jpa-entity-generator-maven-plugin/target/test-classes" />
       <arg
         line="jpa-entity-generator:reverse -D configFilePath=${jeg-config}" />
